--- a/12-on_your_own.Rmd
+++ b/12-on_your_own.Rmd
@@ -678,7 +678,7 @@ tmp %>%
 
 ```{r, echo=T, results='hide', message =F, warning=F, class.source="Rmain"}
 # LOad the packages
-library(kableExtra);library(dplyr); library(sf); library(MODISTools); library(lubridate); library(corrplot); library(traitdata); library(terra); library(osmdata); library(elevatr)
+library(kableExtra);library(dplyr); library(sf); library(modisfast); library(lubridate); library(corrplot); library(traitdata); library(terra); library(osmdata); library(elevatr)
 ```
 
 ### Species Traits
@@ -751,7 +751,7 @@ library(osmdata)
 aoi <- st_bbox(st_buffer(locs_sf, 10000)) # Units are in meters 
 
 water <- opq(aoi) %>%
-           add_osm_feature(key="water") %>%
+           add_osm_feature(key = 'natural', value = 'water') %>%
            osmdata_sf()
 
 # THERE IS NO OPEN STREET MAP DATA FOR THIS AREA - ARGH
@@ -762,39 +762,47 @@ water <- opq(aoi) %>%
 #######
 # NDVI
 
-library(MODISTools)
-modis_locs <- locs %>% 
-  select("placename", "longitude", "latitude") %>% 
-  rename(site_name=placename, lat=latitude, lon=longitude)
+library(modisfast)
 
+log <- mf_login(credentials = c("cameratrap_course", "CMI_Revelstoke_2025")) # set your own EOSDIS username and password
 
-# list available dates for a product at a location
-dates <- mt_dates(product = "MOD13Q1", lat = modis_locs$lat[1], lon = modis_locs$lon[1]) #MOD15A2H
+# Create aoi if sf format
+aoi_sf <- st_as_sf(data.frame(id = "los_amigos", geom = st_as_sfc(aoi), wkt = "geom", crs = 4326)) # a ROI of interest, format sf polygon
 
-# Get the first and last date!
-first(dates$calendar_date); last(dates$calendar_date)
+# MODIS collections and variables (bands) of interest
+collection <- "MOD13Q1.061" # run mf_list_collections() for an exhaustive list of collections available
+variables <- c("_250m_16_days_NDVI") # run mf_list_variables("MOD13Q1.061") for an exhaustive list of variables available for the collection "MOD13A3.061"
 
+# Specify the time range - we will use a winter-summer transition
+time_range <- as.Date(c("2022-01-01", "2022-02-28")) # a time range of interest
 
-site_ndvi <- mt_batch_subset(product = "MOD13Q1",
-                              df=modis_locs,
-                              band = "250m_16_days_NDVI",
-                              start = "2022-01-01",
-                              end = "2022-02-28",
-                              km_lr = 0,         # Use these options if you want to buffer the value (km left)
-                              km_ab = 0,         # Use these options if you want to buffer the value (km above)
-                              internal = TRUE)
+## Get the URLs of the data
+urls <- mf_get_url(
+  collection = collection,
+  variables = variables,
+  roi = aoi_sf,
+  time_range = time_range
+)
 
-ndvi_simple <- site_ndvi %>% 
-  select(	site, band, calendar_date, value) %>% 
-  rename(placename=site)
+## Download the data. By default the data is downloaded in a temporary directory, but you can specify a folder
+res_dl <- mf_download_data(urls, parallel = TRUE)
 
-tmp <- ndvi_simple %>%             #Take the NDVI layer
-  group_by(placename) %>%          # Group observations by the placename
-  summarize(mean_ndvi=mean(value)) # Take the mean of the values and call the new column `mean_ndvi`
+# Import it into R
+r <- mf_import_data(
+  path = dirname(res_dl$destfile[1]),
+  collection = collection,
+  proj_epsg = 4326
+)
 
-# Add the new data to our locations dataframe
-locs_sf <- left_join(locs_sf, tmp)
+# Plot the resulting NDVI data
+terra::plot(r, col = rev(terrain.colors(20)), 
+            range=c(0,1)) # Specify the range of values you want to plot
 
+# Extract the data to camera locations
+tmp <- terra::extract(r, locs_sf, fun=mean, ID=F) # Extract - each layer will become its own column
+locs_sf$mean_ndvi <- rowMeans(tmp) # take the mean of each column
+
+#######################################
 # Convert it back to a dataframe
 locs_sf$geometry <- NULL
 
