--- a/02-standardisation.Rmd
+++ b/02-standardisation.Rmd
@@ -19,20 +19,20 @@ The convention we use in this course is the [data standards used by Wildlife Ins
 
 Their standard format is composed of four different elements:
 
-- *Project data* `proj.csv` a dataframe containing key information about the project itself, e.g. how the cameras were deployed and what the target features were.
-- *Image data* `img.csv` a dataframe containing all of the information contained within each image. This information is typically added by humans, but increasing we are using artificial intelligence to speed up this process. 
-- *Deployment data* `dep.csv` a dataframe listing the activity of the camera traps involved in your study, and any issues encountered during deployments which may influence their analysis
-- *Camera data* `cam.csv` a dataframe all the cameras deployed in the project
+- *Project data* `projects.csv` a dataframe containing key information about the project itself, e.g. how the cameras were deployed and what the target features were.
+- *Image data* `imgages.csv` a dataframe containing all of the information contained within each image. This information is typically added by humans, but increasing we are using artificial intelligence to speed up this process. 
+- *Deployment data* `deployments.csv` a dataframe listing the activity of the camera traps involved in your study, and any issues encountered during deployments which may influence their analysis
+- *Camera data* `cameras.csv` a dataframe all the cameras deployed in the project
 
 Below we give a quick summary and explanation of each. 
 
 First, read in the data files:
 
 ```{r ch2_2, message+f, warning=F, class.source="Rinfo"}
-pro <- read.csv("data/raw_data/example_data/proj.csv", header=T)
-img <- read.csv("data/raw_data/example_data/img.csv", header=T)
-dep <- read.csv("data/raw_data/example_data/dep.csv", header=T)
-cam <- read.csv("data/raw_data/example_data/cam.csv", header=T)
+pro <- read.csv("data/raw_data/example_data/projects.csv", header=T)
+img <- read.csv("data/raw_data/example_data/imgages.csv", header=T)
+dep <- read.csv("data/raw_data/example_data/deployments.csv", header=T)
+cam <- read.csv("data/raw_data/example_data/cameras.csv", header=T)
 ```
 
 Let's look at each one in turn.
