--- a/12-on_your_own.Rmd
+++ b/12-on_your_own.Rmd
@@ -16,17 +16,17 @@ I will help you read in the data - and correct a mistake I made. Then you are on
 ### Read in the data and packages
 ```{r ch13_1, class.source="Rmain", echo=T, eval=F}
 # Load your data 
-pro <- read.csv("data/raw_data/your_data/proj.csv", header=T)
-# I missed of the project ID from all the dtaframes so we need to update those
+pro <- read.csv("data/raw_data/your_data/projects.csv", header=T)
+# I missed of the project ID from all the dataframes so we need to update those
 pro$project_id <- pro$project_name
 
-img <- read.csv("data/raw_data/your_data/img.csv", header=T)
+img <- read.csv("data/raw_data/your_data/images.csv", header=T)
 img$project_id <- pro$project_name
 
-dep <- read.csv("data/raw_data/your_data/dep.csv", header=T)
+dep <- read.csv("data/raw_data/your_data/deployments.csv", header=T)
 dep$project_id <- pro$project_name
 
-cam <- read.csv("data/raw_data/your_data/cam.csv", header=T)
+cam <- read.csv("data/raw_data/your_data/cameras.csv", header=T)
 cam$project_id <- pro$project_name
 
 
@@ -40,13 +40,16 @@ new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"
 if(length(new.packages)) install.packages(new.packages)
 lapply(list.of.packages, require, character.only = TRUE)
 
+# Add the 'placename' column to the image data. 
+# The following code matches every deployment ID in images, with deployment_id's and placenames in the deployment data. 
+img <- left_join(img, dep[,c("deployment_id", "placename")])
+
 ```
 
 
 ### Format the dates
 
 ```{r, echo=T, eval=F, class.source="Rmain"}
-
 # Deployment dates
 # start dates
 dep$start_date <- ymd(dep$start_date)
@@ -201,15 +204,19 @@ p
 
 ```{r, echo=T, eval=F, class.source="Rmain"}
 #Camera activity plot
-# Make a separate plot for each 20 stations For each 20 stations
+# Make a separate plot for each 30 stations 
 # Order by placename to make the graphs easier to follow
 dep <- dep[order(dep$placename),]
 
-
 # To do this make a plot dataframe
-tmp <- data.frame("deployment_id"=unique(dep$deployment_id), "plot_group"=ceiling(1:length(unique(dep$deployment_id))/20))
+tmp <- data.frame("deployment_id"=unique(dep$deployment_id), "plot_group"=ceiling(1:length(unique(dep$deployment_id))/30))
 
 dep_tmp <- left_join(dep,tmp, by="deployment_id")
+
+
+# Make a colour palette for blanks vs. real detections
+cols <- c("red", "blue")
+
 
 for(i in 1:max(dep_tmp$plot_group))
 {  
@@ -241,7 +248,7 @@ for(i in 1:max(dep_tmp$plot_group))
                        # Add the deployment ID as hover text
                        hovertext=paste(tmp_img$genus,tmp_img$species), 
                        # Color it all black
-                       marker = list(color = "red"), 
+                       marker = list(color = cols[tmp_img$is_blank+1]), 
                        # Suppress the legend
                        showlegend = FALSE)
         }
